PIG-3970: Merge Tez branch into trunk
git-svn-id: https://svn.apache.org/repos/asf/pig/trunk@1598702 13f79535-47bb-0310-9956-ffa450edef68